# pupil_ros_plugin

./: CMakeLists.txt  README.MD  package.xml
launch/: pupil_ros.launch
msg/: gaze.msg  gaze_positions.msg  pupil.msg  pupil_positions.msg
plugins/: example_plugin.py  pupil_ros_pub.py
scripts/: pupil_zmq_ros_pub.py
